--- a/app/src/main/res/layout/country_list.xml
+++ b/app/src/main/res/layout/country_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.aditi.countrylistapp.CountryListActivity">
+    tools:context="app.aditi.countrylistapp.activities.CountryListActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/svRefreshCountries"
