--- a/app/src/main/res/layout/country_list.xml
+++ b/app/src/main/res/layout/country_list.xml
@@ -6,10 +6,24 @@
     android:layout_height="match_parent"
     tools:context="app.aditi.countrylistapp.activities.CountryListActivity">
 
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/country_list"
+        android:gravity="center"
+        android:textSize="@dimen/txt_20sp"
+        android:padding="@dimen/margin_padding_10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"/>
+
+
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/svRefreshCountries"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvCountries"
