--- a/app/src/main/res/layout/country_details.xml
+++ b/app/src/main/res/layout/country_details.xml
@@ -37,7 +37,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
+        android:scrollbars="vertical"
         app:layout_constraintTop_toBottomOf="@+id/rlTitle">
 
         <android.support.constraint.ConstraintLayout
