--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,8 @@
     <dimen name="margin_padding_5dp">5dp</dimen>
     <dimen name="margin_padding_10dp">10dp</dimen>
     <dimen name="country_img_wh">44dp</dimen>
-    <dimen name="title">50dp</dimen>
+    <dimen name="title">48dp</dimen>
     <dimen name="dimen_30dp">30dp</dimen>
     <dimen name="dimen_200dp">200dp</dimen>
+    <dimen name="dimen_1dp">1dp</dimen>
 </resources>
